{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 38,
  "lineage": "e9519faa-cb73-443a-ad95-5e12df5afd2e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c145449df1bc747e",
            "arn": "arn:aws:ec2:us-east-1:884576820243:elastic-ip/eipalloc-0c145449df1bc747e",
            "associate_with_private_ip": "10.81.3.33",
            "association_id": "eipassoc-0e1e6edde544d7a9c",
            "domain": "vpc",
            "id": "eipalloc-0c145449df1bc747e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08441d37d000debce",
            "private_dns": "ip-10-81-3-33.ec2.internal",
            "private_ip": "10.81.3.33",
            "public_dns": "ec2-34-234-46-166.compute-1.amazonaws.com",
            "public_ip": "34.234.46.166",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "prod_eip"
            },
            "tags_all": {
              "Name": "prod_eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.prod_nic",
            "aws_security_group.prod_sg",
            "aws_subnet.prod_sn",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0cbbe2c6a1bb2ad63",
            "arn": "arn:aws:ec2:us-east-1:884576820243:instance/i-0c833f06c046455a4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c833f06c046455a4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Talha",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-08441d37d000debce"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08441d37d000debce",
            "private_dns": "ip-10-81-3-33.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.81.3.33",
            "public_ip": "34.234.46.166",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-065272fb264e8f49c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c84bee1c4a2df71",
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-042e218fab7a8f3b0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_network_interface.prod_nic",
            "aws_security_group.prod_sg",
            "aws_subnet.prod_sn",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884576820243:internet-gateway/igw-06ca6dc437df394b1",
            "id": "igw-06ca6dc437df394b1",
            "owner_id": "884576820243",
            "region": "us-east-1",
            "tags": {
              "Name": "prod_igw"
            },
            "tags_all": {
              "Name": "prod_igw"
            },
            "vpc_id": "vpc-07b747eaa59bfe4a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "prod_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884576820243:network-interface/eni-08441d37d000debce",
            "id": "eni-08441d37d000debce",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:dc:34:89:15:4d",
            "owner_id": "884576820243",
            "private_ip": "10.81.3.33",
            "private_ip_list": [
              "10.81.3.33"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.81.3.33"
            ],
            "private_ips_count": 0,
            "region": "us-east-1",
            "security_groups": [
              "sg-042e218fab7a8f3b0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c84bee1c4a2df71",
            "tags": {
              "Name": "prod_nic"
            },
            "tags_all": {
              "Name": "prod_nic"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.prod_sg",
            "aws_subnet.prod_sn",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884576820243:route-table/rtb-08ba8fc893d2de6bf",
            "id": "rtb-08ba8fc893d2de6bf",
            "owner_id": "884576820243",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ca6dc437df394b1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod_rt"
            },
            "tags_all": {
              "Name": "prod_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b747eaa59bfe4a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0785021b496c71f",
            "region": "us-east-1",
            "route_table_id": "rtb-08ba8fc893d2de6bf",
            "subnet_id": "subnet-02c84bee1c4a2df71"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_route_table.prod_rt",
            "aws_subnet.prod_sn",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884576820243:security-group/sg-042e218fab7a8f3b0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042e218fab7a8f3b0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250723225210174700000001",
            "name_prefix": "terraform-",
            "owner_id": "884576820243",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod_sg"
            },
            "tags_all": {
              "Name": "prod_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07b747eaa59bfe4a3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884576820243:subnet/subnet-02c84bee1c4a2df71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.81.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c84bee1c4a2df71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884576820243",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod_sn"
            },
            "tags_all": {
              "Name": "prod_sn"
            },
            "vpc_id": "vpc-07b747eaa59bfe4a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884576820243:vpc/vpc-07b747eaa59bfe4a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.81.0.0/16",
            "default_network_acl_id": "acl-0477ee085ae988b67",
            "default_route_table_id": "rtb-0bfae8c840010872e",
            "default_security_group_id": "sg-0979a00de2d53c897",
            "dhcp_options_id": "dopt-066338c4ad44192e5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07b747eaa59bfe4a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bfae8c840010872e",
            "owner_id": "884576820243",
            "region": "us-east-1",
            "tags": {
              "Name": "prod_vpc"
            },
            "tags_all": {
              "Name": "prod_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}